Cyberduck
http://cyberduck.io/

Changelog. Last modified: $Date$

5.0.3 [https://trac.cyberduck.io/milestone/5.0.3]
- [Feature] Deleting multiple files concurrently (#9585)

5.0.2 [https://trac.cyberduck.io/milestone/5.0.2]
- [Bugfix] Fail to list directory with equals symbol in path (S3) (#9574)
- [Bugfix] Failure to launch program (CLI Linux) (#9586)

5.0.1 [https://trac.cyberduck.io/milestone/5.0.1]
- [Feature] Support for hubiC (OVH) (OpenStack Swift) (#7764)
- [Bugfix] Support authenticating with multiple accounts (Google Drive) (#9567)
- [Bugfix] Copying files using multipart API (S3) (#9578)

5.0 [https://trac.cyberduck.io/milestone/5.0]
- [Feature] Updated user interface; new monochrome toolbar icons (Mac)
- [Feature] Support for Google Drive (#6976)
- [Feature] Support for Spectra BlackPearl Deep Storage Gateway (Spectra S3)
- [Feature] Option to use AWS KMS–Managed Keys (SSE-KMS) for server side encryption (S3)
- [Feature] Default to use AWS4 signature version for authentication (S3)
- [Feature] Repeat failed transfers for single segments of multipart large file transfer (S3, OpenStack Swift, Backblaze B2)
- [Bugfix] Retry transfer for 421 error reply from server with a delay (FTP) (#9368)
- [Bugfix] No prompt for importing WinSCP bookmarks (Windows) (#9208)
- [Bugfix] Signature mismatch for presigned URLs with AWS4 signing (S3) (#9317, #9479)
- [Bugfix] Unable to negotiate acceptable set of security parameters (WebDAV) (#9452)
- [Bugfix] Interoperability with Atlassian Confluence (WebDAV)
- [Bugfix] Interoperability with Oracle Cloud (OpenStack Swift) (#9223)

4.9.3
- [Bugfix] Revert reading NTLM domain and workstation from environment (WebDAV, Windows)
- [Bugfix] Fix crash in software updater (Windows)

4.9.2
- [Bugfix] Fix application launch failure when running with disabled updater (Mac)

4.9.1
- [Feature] Support password change requests (SFTP) (#8821)
- [Bugfix] Default path value setting in bookmark ignored (#9435)