@@ -34,7 +34,10 @@
     <a href="https://trac.cyberduck.io/milestone/5.0.3"><strong>Version 5.0.3</strong></a>
 </p>
 <ul>
-    <li>[Feature] Deleting multiple files concurrently (#9585)</li>
+    <li>[Feature] Deleting multiple files concurrently (<a
+            href="https://trac.cyberduck.io/ticket/9585">#9585</a>)
+    </li>
+    <li>[Feature] Set modification date in metadata for uploads (Backblaze B2)</li>
 </ul>
 <p>
     <a href="https://trac.cyberduck.io/milestone/5.0.2"><strong>Version 5.0.2</strong></a>
